--- a/Simon/login.html
+++ b/Simon/login.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Signin</title>
+    	<title>Login</title>
        <meta charset="utf-8" />
 
      </head>
      <body>
-       <h1>Sign in</h1>
+      <div align="center">
+       <h1>Log in</h1>
        <form action="login.php" method="post">
        	
        	<table>
-       		<tr>
-       			<td>Login</td>
-       			<td> <input type="text" name="adresse"></td>
-       		</tr>
-
-       		<tr>
-       			<td>Password</td>
-       			<td> <input type="password" name="mdp"></td>
-       		</tr>
-
-       		
+       		 <tr>
+            <td align="right">Mail :</td>
+            <td> <input type="text"  placeholder="Votre mail" name="adresse"></td><br><tr> </tr><tr></tr><tr></tr><tr></tr>
+          </tr><tr></tr>
 
           <tr>
-            <td colspan="2"><input type="submit" value="Sign in"></td>
+            <td align="right">Password :</td>
+            <td> <input type="password" placeholder="Votre mot de passe"  name="mdp"></td><tr> </tr><tr></tr><tr></tr><tr></tr>
+          </tr><tr></tr>
+
+<tr></tr>
+<tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+          <tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+            <td></td>
+            <td align="left"><input type="submit" value="Log in"></td>
           </tr>
 
+          <tr></tr>
+<tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+          <tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+            <td></td>
+            <td align="left"><input type="submit" value="Sign in"></td>
+          </tr>
 
 
        	</table>
@@ -34,7 +42,7 @@
 
 
 
-
+</div>
 
 
      </body>
