--- a/Hugo/new/modification.html
+++ b/Hugo/new/modification.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>SB Admin - Start Bootstrap Template</title>
   <!-- Bootstrap core CSS-->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -17,26 +16,29 @@
 </head>
 
 <body class="bg-dark">
+    
   <div class="container">
-    <div class="card card-login mx-auto mt-5">
-      <div class="card-header">Bienvenue sur LinkECE</div>
+    <div class="card card-register mx-auto mt-5">
+      <div class="card-header">Rentrez vos informations pour compléter l'inscription</div>
       <div class="card-body">
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
-            <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" name="email" placeholder="Entrer email">
+              <div class="form-group">
+            <label for="exampleInputp1">Photo de Profil</label>
+            <input class="form-control" id="exampleInputp1" name="photo_profil" type="text" aria-describedby="p1Help" placeholder="Ajouter photo de profil">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Mot de passe</label>
-            <input class="form-control" id="exampleInputPassword1" type="password" nam="mdp" placeholder="Entrer mot de passe">
+            <label for="exampleInputp2">Photo de couverture</label>
+            <input class="form-control" name="photo_couverture" id="exampleInputp2" type="text" aria-describedby="p2Help" placeholder="Ajouter photo de couverture">
           </div>
-        <div>
-          <a class="btn btn-primary btn-block" href="accueil.html">Sign In</a></div> <br>
-            <div><a class="btn btn-primary btn-block" href="register.html">S'enregistrer</a></div>
-        </form>
+
+
+          <a class="btn btn-primary btn-block" href="login.html">Enregistrer</a>
+
+      
+
       </div>
     </div>
   </div>
+
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
