--- a/Hugo/new/admin.html
+++ b/Hugo/new/admin.html
@@ -29,13 +29,10 @@
             <label for="exampleInputPrenom">Prénom</label>
             <input class="form-control" id="exampleInputPrenom" type="text" name="prenom" placeholder="Entrer le prénom">
           </div><br>
-          <label for="exampleInputchoix">Choix</label>
-            <select id="choix">
-                <option value="Ajouter">Ajouter</option>
-                <option value="Supprimer">Supprimer</option>
-            </select><br><br>
         <div>
-          <a class="btn btn-primary btn-block" href="login.html">Envoyer</a></div> <br>
+          <a class="btn btn-primary btn-block" href="register.html">Ajouter</a></div> <br>
+        <div>
+          <a class="btn btn-primary btn-block" href="login.html">Supprimer</a></div> <br>
             <div><a class="btn btn-primary btn-block" href="login.html">Retour</a></div>
         </form>
       </div>
