profilami/photo/demande

--- a/Hugo/new/accueil.html
+++ b/Hugo/new/accueil.html
@@ -40,7 +40,7 @@
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Accueil">
           <a class="nav-link" href="accueil.html">
             <i class="fa fa-fw fa-dashboard"></i>
-            <span class="nav-link-text">Acceuil</span>
+            <span class="nav-link-text">Accueil</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Vous">
@@ -65,7 +65,7 @@
          </ul>
           
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="photo.html">
             <i class="fa fa-fw fa-link"></i>
             <span class="nav-link-text">Photos</span>
           </a>
