--- a/Hugo/new/Vous.html
+++ b/Hugo/new/Vous.html
@@ -31,7 +31,7 @@
     
   <!-- Navigation Menu-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="vous.html">LinkECE</a>
+    <a class="navbar-brand" href="accueil.html">LinkECE</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -65,7 +65,7 @@
          </ul>
           
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="photo.html">
             <i class="fa fa-fw fa-link"></i>
             <span class="nav-link-text">Photos</span>
           </a>
@@ -217,7 +217,6 @@
                         <center> 
                        <label>Prénom: Philippe</label><br>
                        <label>Nom: Poutoux</label><br>
-                       <label>Naissance: 2016-07-12</label><br>
                        <label>Téléphone: 0609046666</label><br>
                        <label>Adresse: 1 rue basse</label><br>
                        <label>Mail: hu.go@mail</label><br>
